--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -74,6 +72,13 @@
                     <span class="loc-dist">Clique para traçar rota</span>
                 </div>
             </div>
+            <div class="location-item-alt" onclick="gpsParaLocal(2100, -1800, 'Pizzaria')">
+                <div class="loc-icon">🍕</div>
+                <div class="loc-info">
+                    <span class="loc-name">Pizzaria</span>
+                    <span class="loc-dist">Clique para traçar rota</span>
+                </div>
+            </div>
 
             <div class="location-footer">
                 Botão Direito: Marcar Destino Livre<br>
@@ -84,5 +89,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
