--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
                     <span class="loc-dist">Clique para traçar rota</span>
                 </div>
             </div>
+            <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Loja de Conveniência')">
+                <div class="loc-icon">🏪</div>
+                <div class="loc-info">
+                    <span class="loc-name">Loja de Conveniência</span>
+                    <span class="loc-dist">Clique para traçar rota</span>
+                </div>
+            </div>
+            <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Auto Escola')">
+                <div class="loc-icon">🏫</div>
+                <div class="loc-info">
+                    <span class="loc-name">Auto Escola</span>
+                    <span class="loc-dist">Clique para traçar rota</span>
+                </div>
+            </div>
 
             <div class="location-item-alt" onclick="gpsParaLocal(1543, -1675, 'Delegacia')">
                 <div class="loc-icon">🚔</div>
