--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
                     <span class="loc-dist">Clique para traçar rota</span>
                 </div>
             </div>
+            <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Vanilla Nithe Club')">
+                <div class="loc-icon">🏪</div>
+                <div class="loc-info">
+                    <span class="loc-name">Vanilla Nithe Club</span>
+                    <span class="loc-dist">Clique para traçar rota</span>
+                </div>
+            </div>
 
             <div class="location-item-alt" onclick="gpsParaLocal(1543, -1675, 'Delegacia')">
                 <div class="loc-icon">🚔</div>
