--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,6 +57,13 @@
                 </div>
             </div>
             <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Aera Vermelha 1')">
+                <div class="loc-icon">💀</div>
+                <div class="loc-info">
+                    <span class="loc-name">Aera Vermelha 1</span>
+                    <span class="loc-dist">Clique para traçar rota</span>
+                </div>
+            </div>
+            <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Aera Vermelha 2')">
                 <div class="loc-icon">💀</div>
                 <div class="loc-info">
                     <span class="loc-name">Aera Vermelha 1</span>
