--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                     <span class="loc-dist">Clique para traçar rota</span>
                 </div>
             </div>
+            <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Aera Vermelha 2')">
+                <div class="loc-icon">💀</div>
+                <div class="loc-info">
+                    <span class="loc-name">Aera Vermelha 1</span>
+                    <span class="loc-dist">Clique para traçar rota</span>
+                </div>
+            </div>
             <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Loja de Conveniência')">
                 <div class="loc-icon">🏪</div>
                 <div class="loc-info">
