--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <div class="minimap-circle">
                 <img src="map.png" id="map-img">
                 
-                <svg id="gps-svg-mini" viewBox="0 0 2500 2500" preserveAspectRatio="xMidYMid slice" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 5;">
-                    <polyline id="gps-path-mini" points="" fill="none" stroke="#bf00ff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <svg id="gps-svg-mini" viewBox="0 0 2500 2500" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 5;">
+                    <polyline id="gps-path-mini" points="" fill="none" stroke="#bf00ff" stroke-width="5" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
 
                 <div class="player-arrow"></div>
