--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
         <div class="minimap-area">
             <div class="minimap-circle">
-                <img src="map.png" id="map-img">
+                <img src="map.png" id="map-img" style="position: absolute; width: 2500px; height: 2500px;">
                 
-                <svg id="gps-svg-mini" viewBox="0 0 2500 2500" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 5;">
-                    <polyline id="gps-path-mini" points="" fill="none" stroke="#bf00ff" stroke-width="5" stroke-linecap="round" stroke-linejoin="round" />
+                <svg id="gps-svg-mini" style="position: absolute; width: 2500px; height: 2500px; pointer-events: none; z-index: 5;">
+                    <polyline id="gps-path-mini" points="" fill="none" stroke="#bf00ff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
 
-                <div class="player-arrow"></div>
+                <div class="player-arrow">▲</div>
             </div>
         </div>
     </div>
@@ -49,13 +49,6 @@
         <div class="map-locations-float">
             <div class="location-header">SISTEMA DE GPS</div>
             
-            <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Hospital')">
-                <div class="loc-icon">🏥</div>
-                <div class="loc-info">
-                    <span class="loc-name">Hospital Central</span>
-                    <span class="loc-dist">Clique para traçar rota</span>
-                </div>
-            </div>
             <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Hospital')">
                 <div class="loc-icon">🏥</div>
                 <div class="loc-info">
