--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <polyline id="gps-path-mini" points="" fill="none" stroke="#bf00ff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
 
-                <div class="player-arrow">▲</div>
+                <div class="player-arrow"></div>
             </div>
         </div>
     </div>
@@ -49,6 +49,13 @@
         <div class="map-locations-float">
             <div class="location-header">SISTEMA DE GPS</div>
             
+            <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Hospital')">
+                <div class="loc-icon">🏥</div>
+                <div class="loc-info">
+                    <span class="loc-name">Hospital Central</span>
+                    <span class="loc-dist">Clique para traçar rota</span>
+                </div>
+            </div>
             <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Hospital')">
                 <div class="loc-icon">🏥</div>
                 <div class="loc-info">
