--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
                     <span class="loc-dist">Clique para traçar rota</span>
                 </div>
             </div>
+            <div class="location-item-alt" onclick="gpsParaLocal(1476.84, -1740.43, 'Prefeitura')">
+                <div class="loc-icon">🏛️</div>
+                <div class="loc-info">
+                    <span class="loc-name">Prefeitura</span>
+                    <span class="loc-dist">Clique para traçar rota</span>
+                </div>
+            </div>
             <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Aera Vermelha 1')">
                 <div class="loc-icon">💀</div>
                 <div class="loc-info">
