--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="location-item-alt" onclick="gpsParaLocal(1476.84, -1740.43, 'Prefeitura')">
                 <div class="loc-icon">🏛️</div>
                 <div class="loc-info">
-                    <span class="loc-name">Prefeituraa</span>
+                    <span class="loc-name">Prefeitura</span>
                     <span class="loc-dist">Clique para traçar rota</span>
                 </div>
             </div>
