--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         </div>
 
         <div class="map-locations-float">
+            <div id="icon-prefeitura" class="map-icon-fixed">
+                <img src="25.png" width="24">
+            </div>
             <div class="location-header">SISTEMA DE GPS</div>
             
             <div class="location-item-alt" onclick="gpsParaLocal(1242, -1694, 'Hospital')">
