--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="location-item-alt" onclick="gpsParaLocal(1476.84, -1740.43, 'Prefeitura')">
-                <div class="loc-icon">🏛️</div>
+                <div class="loc-icon"><img src="25.png" width="24"></div>
                 <div class="loc-info">
                     <span class="loc-name">Prefeitura</span>
                     <span class="loc-dist">Clique para traçar rota</span>
